--- a/src/partials/hero.hbs
+++ b/src/partials/hero.hbs
@@ -53,14 +53,14 @@
 
                 <div class='flex flex-col sm:flex-row gap-4 justify-center lg:justify-start mb-8'>
                     <a
-                        href='tenants/site/demos.html'
+                        href='#demos'
                         class='btn btn-masala px-8 py-4 text-lg no-underline inline-flex items-center justify-center'
                     >
                         <i class='fas fa-rocket mr-2' aria-hidden='true'></i>
                         Explore Ecosystem
                     </a>
                     <a
-                        href='#architecture'
+                        href='#demos'
                         class='btn btn-glass px-8 py-4 text-lg no-underline inline-flex items-center justify-center'
                     >
                         <i class='fas fa-info-circle mr-2' aria-hidden='true'></i>
